# idlc

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  annotated.html  annotated_dup.js  browserconfig.xml  custom.css  dir_84084b38bd069a0ec1f12b6ae3ba8404.html  dir_84084b38bd069a0ec1f12b6ae3ba8404.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_e68e8157741866f444e17edd764ebbae.html  dir_e68e8157741866f444e17edd764ebbae.js  doxygen_crawl.html  embedded-compiler.html  files.html  files_dup.js  graph_legend.html  group__api__c.html  group__api__c.js  group__api__js.html  group__enums.html  group__enums.js  group__files.html  group__files.js  group__functions.html  group__functions.js  group__macros.html  group__macros.js  group__structs.html  group__structs.js  group__types.html  group__types.js  groups_8h_source.html  idl-options_8h.html  idl-options_8h.js  idl-options_8h_source.html  (+42 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-single-platform.yml  publish-doc.yml  publish-npm.yml
cmake/: add-flex-bison.cmake  bison-install.cmake  flex-install.cmake  idlc-config.cmake.in  m4-install.cmake  package.cmake  package.json.in  vcpkg.cmake  version.cmake  version.hpp.in
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  custom.css  embedded-compiler.md  footer.html  groups.h  header.html  idlc-doc.js  installation.md  introduction.md  language-guide.md  quick-start.md  tutorial.md
doc/icons/: site.webmanifest
include/idlc/: idl-options.h  idl-platform.h  idl-results.h  idl-types.h  idl-version.h  idl.h
include/sample/: sample-platform.h  sample-types.h  sample-version.h  sample.h
ports/idlc/: idlc-targets-vcpkg.cmake  portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_3.js  groups_4.js  pages_0.js  pages_1.js  pages_2.js  pages_4.js  pages_6.js  searchdata.js  typedefs_0.js  variables_0.js  (+7 more)
specs/: api.idl  options.idl  results.idl
src/: Scanner.hpp  ast.hpp  case_converter.hpp  compilation_result.hpp  compiler.cpp  context.hpp  errors.hpp  generator_c.cpp  generator_c.hpp  generator_cs.cpp  generator_csharp.cpp  generator_js.cpp  idl.hpp  idl.ll  idl.yy  location.hpp  main.cpp  object.hpp  options.hpp  sample.c  scanner.hpp  version.hpp  visitors.hpp
tests/: CMakeLists.txt  node-test-esm.js  node-test-umd.js  tests.cpp
versions/: baseline.json
versions/i-/: idlc.json
